@startuml
class AuditEvent {
     protected AuditOperation requestAction;
     protected OperationStatus messageStatus;
     protected Optional<Keyable> newValue;
     protected Optional<Keyable> oldValue;
}


enum OperationStatus {
    STARTED(1),
    COMPLETED(10),
    FAILED(-1);
}

interface AuditDifferentiator {
   List<Difference> diff(CRUDEnum crudEnum, Keyable oldObj, Keyable newObj);
   List<Difference> diff(CRUDEnum crudEnum, Keyable newObj);
}

interface AuditDifferentiable {
    List<Difference> diff(CRUDEnum crudEnum, Keyable t)
}



AuditDifferentiator <|-- ReflectiveAuditDifferentiator

note right of ReflectiveAuditDifferentiator
The reflective based diffing class that works with
keyable entities. The audit annotations are honoured by
this implementation
end note

class ReflectionCaches {

}

ReflectiveAuditDifferentiator-> ReflectionCaches : lazily reads/caches method instances

class StartEvent
class CompleteEvent
class FailEvent

interface AuditOperationLifecycleListener {
  +eventPerformed(AuditEvent)
}

note top of AuditOperationLifecycleListener
The listener responds to audit lifecycle callbacks
end note

class AuditableResult {
  Object getResultingValue()
  Keyable getNewEntity()
}

note bottom of AuditEvent
The audit event that represents the differing stages of an
audit operation
end note

class AuditOperation {
    String getEventName();
    CRUDEnum getType();
    Class<T> getEntityClass();
}
note bottom of AuditOperation
    An operation specific audit operation
end note

class CRUDEnum {
   CREATE('C'),
   READ('R'),
   UPDATE('S'),
   DELETE('D');
  +isCreate()
  +isUpdate()
  +isDelete()
}

interface AuditOperationService {
    AuditableResult processAudit(Optional oldValue, AuditOperation auditType,
    Function execution, AuditOperationLifecycleListener... listener);
}


class AuditOperationServiceImpl {
    AuditableResult processAudit(Optional oldValue, AuditOperation auditType,
    Function execution, AuditOperationLifecycleListener... listener);
}

AuditOperationServiceImpl -- AuditableResult
AuditOperationServiceImpl -> AuditOperationLifecycleListener

note top of AuditOperationServiceImpl
The starting point of the API. This service is
responsible for processing audit operations by taking an
existing (old) )value, a specific audit operation type,
a function representing the operation to be audited, and
optional lifecycle listeners to be called. It returns an AuditableResult
with a new value if applicable
end note

class DataAuditLogger {
    void finished(CompleteEvent event)
}

AuditOperationLifecycleListener <|.. DataAuditLogger
AuditOperationLifecycleListener <|.. AuditOperationSlf4jLogger

note left of AuditOperationSlf4jLogger
The listener that simple logs to slf4j. This is
registered by Spring
end note

note top of DataAuditLogger
The listener that handles entity changes, discovers the differences and
saves them to the data_audit database table. The listener that simple logs to slf4j.
This is registered by Spring
end note

class DataAuditRepository {
        save (DataAudit dataAudit) : DataAudit
}

Keyable <|-- DataAudit

DataAuditLogger -> DataAudit : <<create>>
DataAuditLogger -> AuditDifferentiator : diff
DataAuditLogger -> DataAuditRepository : save(DataAudit)
DataAuditLogger -> AuditEvent : <<create>>

AuditOperationService <.. AuditOperationServiceImpl
AuditEvent o-- AuditOperation
AuditEvent o-- OperationStatus
AuditOperation o-- CRUDEnum

AuditEvent <|-- StartEvent
AuditEvent <|-- CompleteEvent
AuditEvent <|-- FailEvent

annotation AuditEnabled {}
annotation Audit {
    CRUDEnum type();
}

note left of AuditEnabled
Annotation that allow us to mark a Keyable
class as auditable
end note

note left of Audit
Annotation to markup a field on a keyable class.
This is used to establish a data diff for a particular audit
operation. NOTE: The annotation is not needed, by default the
whole keyable class data is diffed on all audit operations
end note

@enduml